--- a/templates/data_capture/contact.html
+++ b/templates/data_capture/contact.html
@@ -13,8 +13,7 @@
       </div>
       <div class="card-body">
         <p class="text-muted">
-          If you are an investigator and need to contact the system administrator,
-          please send your message below.
+          Please send your message below.
         </p>
 
         <form method="post" novalidate>
